--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,<svg></svg>" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>This page is not real</title>
+    <title>This page has no backend, yet it runs erlang</title>
   </head>
   <body>
     <div id="app"></div>
